# datageoplan-python-api

./: .env.example  .gitignore  BROWSER_LOGIN_REMOTO.md  CHANGELOG.md  CONCLUSAO_SISTEMA_REMOTO.md  DEPLOY.md  Dockerfile  INTEGRACAO_CSHARP.md  JAVASCRIPT_CAPTURA_COOKIES.md  README.md  SEGURANCA_CORRIGIDA.md  TESTE_BROWSER_LOGIN.md  cli.py  debug_oauth.py  docker-compose.prod.yml  docker-compose.yml  investigate_servicos.py  list_sigef_elements.py  pyproject.toml  requirements.txt  test_direct_oauth.py  test_same_session.py  test_sigef_flow.py
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
_DOCS/: 01_login_govbr.md  02_autenticacao_sigef.md  03_download_csv_sigef.md  04_memorial_descritivo.md
_docs/_car_bbox/: analise-mapa-car.md  consulta_car_bbox.py  getcapabilities_1.1.1.xml  models.py  requisito-endpoint-car-bbox.md
_docs/_examples-process-car/: INTEGRACAO_DATAGEOPLAN.md  modelo_car_referencia.py  processar_car.py
downloads_sigef/: 999a354b_limite.csv  999a354b_parcela.csv  999a354b_vertice.csv
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthStatus.tsx  BatchDownload.tsx  Layout.tsx  ParcelaDownload.tsx  index.ts
frontend/src/pages/: AuthPage.tsx  BatchPage.tsx  ConsultaPage.tsx  DashboardPage.tsx  DownloadPage.tsx  index.ts
frontend/src/services/: api.ts  authService.ts  index.ts  sigefService.ts
frontend/src/types/: api.ts
legacy/: README.md  acessar_sigef.py  gravar_chrome_sistema.py  sigef_api_direta.py  sigef_mapear_apis.py
scripts/: setup-server.sh
src/: __init__.py  main.py
src/api/: __init__.py
src/api/middleware/: __init__.py  auth.py  ratelimit.py  security.py
src/api/v1/: __init__.py  dependencies.py  schemas.py  schemas_car_bbox.py  schemas_incra_bbox.py
src/api/v1/routes/: __init__.py  auth.py  car_bbox.py  consulta.py  sicar.py  sigef.py  sigef_bbox.py
src/api/v1/static/: auth_page.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  car_bbox.py  incra_wfs.py  parcela.py  session.py
src/domain/interfaces/: __init__.py
src/infrastructure/: __init__.py
src/infrastructure/car_wfs/: __init__.py  client.py
src/infrastructure/geoone_wfs/: __init__.py  client.py
src/infrastructure/govbr/: __init__.py  authenticator.py
src/infrastructure/persistence/: __init__.py  session_repository.py
src/infrastructure/sicar_package/: __init__.py  car_reference.py  sld_generator.py
src/infrastructure/sicar_package/SICAR/: sicar.py
src/infrastructure/sicar_package/SICAR/drivers/: __init__.py  paddle.py  tesseract.py
src/infrastructure/sigef/: __init__.py  client.py
src/infrastructure/wfs/: client.py
src/services/: __init__.py  auth_service.py  car_bbox_service.py  car_consulta_service.py  car_processor.py  incra_bbox_service.py  sicar_service.py  sigef_service.py
tests/: conftest.py  test_api.py  test_domain.py
